Style add a projetos e background, ainda estudando como implementar ideias de techs skill e exp

--- a/Html/index.html
+++ b/Html/index.html
@@ -12,6 +12,8 @@
 
 <body>
 
+    <div class="particulas"></div>
+
     <!-- inserir futuramente quando expandir mais o portifolio
      <header class="topo">
         <h1 class="titulo-site">Dev Juniorss</h1>
@@ -35,7 +37,7 @@
         <section id="intro" class="intro">
             <!-- <h2>Inicio</h2> -->
             <article class="perfil" data-tipo="img-perfil">
-                <img src="../images/foto.jpeg" alt="foto de perfil junior" class="foto-perfil">
+                <img src="../images/profile.png" alt="foto de perfil junior" class="foto-perfil">
                 <h1>Alexandre Júnior</h1>
                 <p class="intro-title"> E aí, vamos inovar?</p>
                 <div id="intro-box" class="intro-box">
@@ -109,7 +111,8 @@
                     </li>
                     <li>
                         <h2>Nativo</h2>
-                    </li><li> </li>
+                    </li>
+                    <li> </li>
                 </ul>
             </div>
             <article class="languages-card">
@@ -242,74 +245,82 @@
             </article>
         </section>
         <section id="projects" class="projects">
-            <h2 class="my-projects"> Meus Projetos</h2>
+            <h2 class="projects-title"> Meus Projetos</h2>
             <div class="projects-box">
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <h3 class="project-title">Harmony Aesthetics Zentrum</h3>
-                    <img src="../images/logoHarmony.png" alt="imagem do projeto da clinica de estetica"
-                        class="img-project">
-                    <p class="project-info">
-                        Projeto Web feito para atualizar web site de da Clínica de Estetica, clinica localizada em
-                        Luzern -
-                        Suiça, com varios serviços de beleza com agenda aberta esperando voce.
-                        <!-- talvez n de pra ver pq é um projeto particular -->
-                        <a href="https://github.com/DevJuniorss/HarmonyClinica" target="_blank" class="btn-projeto">Ver
-                            repositório</a>
-                    </p>
+                    <img src="../images/logoHarmony.png" alt="imagem do projeto da clinica de estetica" class="img-project">
+                    <div class="project-info">
+                        <h3 class="project-name">Harmony Aesthetics Zentrum</h3>
+                        <p class="project-paragraph">
+                            Projeto Web feito para atualizar web site de da Clínica de Estetica, clinica localizada em
+                            Luzern -
+                            Suiça, com varios serviços de beleza com agenda aberta esperando voce.
+                            <!-- talvez n de pra ver pq é um projeto particular -->
+                            <a href="https://github.com/DevJuniorss/HarmonyClinica" target="_blank"
+                                class="btn-projeto">Ver
+                                repositório</a>
+                        </p>
+                    </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <h3 class="project-title">LiFitness</h3>
                     <img src="../images/loja.png" alt="imagem do projeto LiFitness em busca da saúde e bem estar."
-                        class="img-project">
-                    <p class="project-info">
-                        Projeto Mobile para conectar você que quer sair do sedentarismo a profissionais capazes nas
-                        areas da
-                        nutrição e personal traineers.
-                        Com facil uso e interface amigavel, este projeto ajuda a pessoas a ingressarem na atividade
-                        física.
+                    class="img-project">
+                    <div class="project-info">
+                    <h3 class="project-name">LiFitness</h3>
+                    <p class="project-paragraph">
+                        Encontre o personal certo, com a rotina certa e de quebra um nutricionista se você precisar
+                        organizar sua alimentação.
                         <a href="https://github.com/DevJuniorss/LiFitness" target="_blank" class="btn-projeto">Ver
                             repositório</a>
                     </p>
+                    </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <h3 class="project-title">Consultorio Siqueira</h3>
                     <img src="../images/logoClinicaSiqueira.jpeg" alt="imagem do projeto Findme" class="img-project">
-                    <p class="project-info">
-                        Projeto Mobile para agilizar e facilitar as marcações de consulta com a psipedagoga e os pais
-                        das
-                        crianças que buscam acompanhamento.
+                    <div class="project-info">
+                    <h3 class="project-name">Consultorio Siqueira</h3>
+                    <p class="project-paragraph">
+                        Consultorio Socorro Siqueira. Agende sua consulta.
                         <a href="https://github.com/DevJuniorss/Findme" target="_blank" class="btn-projeto">Ver
                             repositório</a>
                     </p>
+                    </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <h3 class="project-title">Deposito Siqueira</h3>
                     <img src="../images/logoDepositoSiqueira.png" alt="imagem do projeto Siqueira Construção"
-                        class="img-project">
-                    <p class="project-info">
-                        Projeto Web para vendas de material de construção e controle de estoque da empresa.
+                    class="img-project">
+                    <div class="project-info">
+                    <h3 class="project-name">Deposito Siqueira</h3>
+                    <p class="project-paragraph">
+                        Loja onde você encontra tudo para reformar e construir!
                         <a href="https://github.com/DevJuniorss/DepositoSiqueira" target="_blank"
                             class="btn-projeto">Ver
                             repositório</a>
                     </p>
+                    </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <h3 class="project-title">Kerosene Store</h3>
-                    <img src="../images/loja.png" alt="imagem do projeto Kerosene Store." class="img-project">
-                    <p class="project-info">
-                        Projeto Web para venda de suplementos e acessorios de academia.
+                    <img src="../images/logoKerozeneStore.png" alt="imagem do projeto Kerosene Store."
+                    class="img-project">
+                    <div class="project-info">
+                    <h3 class="project-name">Kerosene Store</h3>
+                    <p class="project-paragraph">
+                        Loja para suplementos e acessorios, tudo em um só lugar.
                         <a href="https://github.com/DevJuniorss/KerozeneStore" target="_blank" class="btn-projeto">Ver
                             repositório</a>
                     </p>
+                    </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <h3 class="project-title">MazeRunner</h3>
                     <img src="../images/logoMaze.png" alt="imagem do projeto Kerosene Store." class="img-project">
-                    <p class="project-info">
+                    <div class="project-info">
+                    <h3 class="project-name">MazeRunner</h3>
+                    <p class="project-paragraph">
                         Pequeno jogo usando alguns algoritmos de busca.
                         <a href="https://github.com/DevJuniorss/MazeRunner" target="_blank" class="btn-projeto">Ver
                             repositório</a>
                     </p>
+                    </div>
                 </article>
             </div>
         </section>
@@ -398,7 +409,6 @@
         </div>
         </p>
     </footer>
-    
     <!-- <script src='../JavaScript/main.js'></script> -->
 </body>
 
