Footer estilizado e funcional

--- a/Html/index.html
+++ b/Html/index.html
@@ -401,15 +401,15 @@
 
     <footer>
         <p>&copy; Todos os direitos reservados</p>
-        <p>
         <div class="social">
-            Linkedin: <a href="https://www.linkedin.com/in/devjuniorss" target="_blank">LinkedIn</a> |
-            GitHub: <a href="https://github.com/DevJuniorss" target="_blank">DevJuniorss</a> |
-            Instagram: <a href="https://www.instagram.com/devjuniorss" target="_blank">Instagram</a>
+           <a href="https://www.linkedin.com/in/devjuniorss"><img src="../images/iconLinkedin.svg" alt="Icone do Linkedin"></a>
+           <a href="https://www.instagram.com/devjuniorss"><img src="../images/iconInstagram.svg" alt="Icone do Instagram"></a> 
+           <a href="https://github.com/DevJuniorss"><img src="../images/iconGitHub.png" alt="Icone do Git Hub"></a>
         </div>
-        </p>
     </footer>
-    <!-- <script src='../JavaScript/main.js'></script> -->
+
+    <script></script>
+
 </body>
 
 </html>
