Organizando imagens no novo diretorio

--- a/Html/index.html
+++ b/Html/index.html
@@ -32,9 +32,9 @@
                     <li><a href="#diplomas" class="menu-link">Diplomas</a></li>
                     <li><a href="#contato" class="menu-link">Contato</a></li>
                 </ul>
-                <!-- corrijir import do fontawesome -->
+                <!-- ativar o toggle e alinhar a direita no topo-->
                 <button id="btn-theme" type="button">
-                    <i class="fa-solid fa-moon">*</i>
+                    <i class="fa-solid fa-moon"></i>
                 </button>
             </nav>
         </div>
@@ -439,7 +439,7 @@
             <h2 class="projects-title"> Meus Projetos</h2>
             <div class="projects-box">
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <img src="../images/logoHarmony.png" alt="imagem do projeto da clinica de estetica"
+                    <img src="../images/Projects/logoHarmony.png" alt="imagem do projeto da clinica de estetica"
                         class="img-project">
                     <div class="project-info">
                         <h3 class="project-name">Harmony Aesthetics Zentrum</h3>
@@ -455,7 +455,7 @@
                     </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <img src="../images/loja.png" alt="imagem do projeto LiFitness em busca da saúde e bem estar."
+                    <img src="../images/Projects/" alt="imagem do projeto LiFitness em busca da saúde e bem estar."
                         class="img-project">
                     <div class="project-info">
                         <h3 class="project-name">LiFitness</h3>
@@ -468,7 +468,7 @@
                     </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <img src="../images/logoClinicaSiqueira.jpeg" alt="imagem do projeto Findme" class="img-project">
+                    <img src="../images/Projects/logoClinicaSiqueira.jpeg" alt="imagem do projeto Findme" class="img-project">
                     <div class="project-info">
                         <h3 class="project-name">Consultorio Siqueira</h3>
                         <p class="project-paragraph">
@@ -479,7 +479,7 @@
                     </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <img src="../images/logoDepositoSiqueira.png" alt="imagem do projeto Siqueira Construção"
+                    <img src="../images/Projects/logoDepositoSiqueira.png" alt="imagem do projeto Siqueira Construção"
                         class="img-project">
                     <div class="project-info">
                         <h3 class="project-name">Deposito Siqueira</h3>
@@ -492,7 +492,7 @@
                     </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <img src="../images/logoKerozeneStore.png" alt="imagem do projeto Kerosene Store."
+                    <img src="../images/Projects/logoKerozeneStore.png" alt="imagem do projeto Kerosene Store."
                         class="img-project">
                     <div class="project-info">
                         <h3 class="project-name">Kerosene Store</h3>
@@ -505,7 +505,7 @@
                     </div>
                 </article>
                 <article class="project-card" data-tipo="projeto-pessoal">
-                    <img src="../images/logoMaze.png" alt="imagem do projeto Kerosene Store." class="img-project">
+                    <img src="../images/Projects/logoMaze.png" alt="imagem do projeto Kerosene Store." class="img-project">
                     <div class="project-info">
                         <h3 class="project-name">MazeRunner</h3>
                         <p class="project-paragraph">
